# YELL-for-ALL_docs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/tech/: knowledge.rst
docs/tech/backend/: index.rst
docs/tech/frontend/: index.rst
docs/tech/managements/: git.rst  index.rst
