[project]
name = "yell-docs"
version = "0.1.0"
description = "YELL for ALL documentation"
authors = [
    {name = "Michitaro Sugawara"}
]
license = {text = "YELL for ALL"}
readme = "README.md"
requires-python = ">=3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2024.10.3"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-plantuml = "^0.30"
sphinxcontrib-mermaid = "^1.0.0"
sphinx-tabs = "^3.4.7"
rstcheck = "^6.2.4"
furo = "^2024.8.6"
pydata-sphinx-theme = "0.15.4"
sphinx-lint = "^1.0.0"
sphinx-togglebutton = "^0.3.2"
myst-parser = "^4.0.1"
sphinx-click = "^6.0.0"
sphinx-design = "^0.6.1"
sphinx-intl = "^2.3.1"
sphinxcontrib-fulltoc = "^1.2.0"
pre-commit = "^4.2.0"
sphinx-book-theme = "1.1.4"


